# active-learning

./: .gitignore  Makefile  README.md  main.ipynb  pyproject.toml  run_experiment.py
configs/: sample.toml
requirements/: util.txt
sampling_methods/: bandit_discrete.py  constants.py  graph_density.py  hierarchical_clustering_AL.py  informative_diverse.py  kcenter_greedy.py  margin_AL.py  mixture_of_samplers.py  represent_cluster_centers.py  sampling_def.py  simulate_batch.py  uniform_sampling.py  wrapper_sampler_def.py
sampling_methods/utils/: tree.py  tree_test.py
src/: dataset.py  run.py  test.py  train.py  visualize.py
src/core/: run_experiment.py  train_learners.py
src/core/active/: build.py  floating_region.py
src/core/configs/: defaults.py
src/core/datasets/: acdc.py  cityscapes.py  dataset_path_catalog.py  gtav.py
src/core/loss/: local_consistent_loss.py
src/core/models/: build.py  classifier.py  layers.py  resnet.py
src/core/sampling_methods/: bandit_discrete.py  constants.py  graph_density.py  hierarchical_clustering_AL.py  informative_diverse.py  kcenter_greedy.py  margin_AL.py  mixture_of_samplers.py  represent_cluster_centers.py  sampling_def.py  simulate_batch.py  uniform_sampling.py  wrapper_sampler_def.py
src/core/sampling_methods/utils/: tree_test.py
src/core/utils/: chart_data.py  create_data.py  misc.py  utils.py  visualize.py
src/dataset/: acdc.py
src/datasets/: __main__.py
src/libraries/google_active_learning/: README.md  run_experiment.py
src/libraries/google_active_learning/sampling_methods/: bandit_discrete.py  constants.py  graph_density.py  hierarchical_clustering_AL.py  informative_diverse.py  kcenter_greedy.py  margin_AL.py  mixture_of_samplers.py  represent_cluster_centers.py  simulate_batch.py  uniform_sampling.py  wrapper_sampler_def.py
src/libraries/google_active_learning/sampling_methods/utils/: tree_test.py
src/libraries/google_active_learning/utils/: allconv.py  kernel_block_solver.py  small_cnn.py  utils.py
src/libraries/halo/: test.py  train.py
src/libraries/halo/core/: train_learners.py
src/libraries/halo/core/active/: build.py  floating_region.py
src/libraries/halo/core/datasets/: synthia.py  transform.py
src/models/: unet.py
utils/: allconv.py  chart_data.py  create_data.py  kernel_block_solver.py  small_cnn.py  utils.py
(+7 files in other folders)
