[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "active-learning"
dynamic = ["version"]
description = "Medical Image active learning"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.12"
license = { file = "LICENSE" }
dependencies = [
    "kagglehub~=0.3.12",
    "toml~=0.10.2",
    "numpy==2.1.3",
    "pandas~=2.2.3",
    "scikit-learn~=1.6.1",
    "matplotlib~=3.10.3",
    "tensorflow~=2.19.0",
    "keras~=3.9.2",
    "torch~=2.7.0",
    "torchvision~=0.22.0",
    "opencv-python~=4.11.0.86",
    "imageio~=2.37.0",
    "geoopt~=0.5.0",
    "pytorch-lightning~=2.5.1",
    "setproctitle~=1.3.6",
    "yacs~=0.1.8",
    "mmengine~=0.10.7",
    "scipy==1.15.3",
    "h5py~=3.13.0"
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
datasets = "core.datasets.acdc:main"
run = "run:main"
visualize = "visualize:main"
